--- a/02.1_Regularized_Linear_Regression_Ridge.ipynb
+++ b/02.1_Regularized_Linear_Regression_Ridge.ipynb
@@ -18,9 +18,9 @@
     "from hyperopt import fmin, tpe, Trials, STATUS_OK, hp, space_eval\n",
     "from functools import partial\n",
     "\n",
-    "from scripts.preprocessing_regression_models import Preprocess\n",
+    "from scripts.Preprocessing import Preprocessing\n",
     "from scripts.LinearRegressionTraining import LinearRegressionTraining\n",
-    "from scripts.config_regression import (year_month_train, \n",
+    "from scripts.config import (year_month_train, \n",
     "    input_data_path_train,\n",
     "    seed)"
    ]
@@ -127,15 +127,15 @@
    "source": [
     "#### Data Preprocessing ####\n",
     "\n",
-    "prepr = Preprocess(input_data_path_train)\n",
+    "prepr = Preprocessing(input_data_path_train)\n",
     "X, Y = prepr.read_dataframe(request_tgt=True)\n",
     "\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3, random_state=seed)\n",
     "\n",
     "#preprocessing ohe\n",
     "shapes_pre = (X_train.shape[0], X_test.shape[0])\n",
-    "X_train_ohe, ohe = prepr.preprocess(df=X_train, fit_ohe=True)\n",
-    "X_test_ohe, _ = prepr.preprocess(df=X_test, fit_ohe=False, ohe=ohe)\n",
+    "X_train_ohe, ohe = prepr.preprocess_for_regression(df=X_train, fit_ohe=True)\n",
+    "X_test_ohe, _ = prepr.preprocess_for_regression(df=X_test, fit_ohe=False, ohe=ohe)\n",
     "assert shapes_pre == (X_train.shape[0], X_test.shape[0])\n",
     "dump(ohe, open(local_path_save + run_name + '_ohe.pkl', 'wb'))"
    ]
@@ -198,6 +198,14 @@
     "plt.axis(\"tight\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c789d6ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
