added Logistic Regression

--- a/00_Regression_Baseline.ipynb
+++ b/00_Regression_Baseline.ipynb
@@ -110,40 +110,7 @@
     "prepr = Preprocessing(input_data_path_train)\n",
     "X, Y = prepr.read_dataframe(request_tgt=True)\n",
     "\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X,Y, test_size=0.3, random_state=seed)\n",
-    "\n",
-    "#preprocessing ohe\n",
-    "shapes_pre = (X_train.shape[0], X_test.shape[0])\n",
-    "X_train_ohe, ohe = prepr.preprocess_for_regression(df=X_train, fit_ohe=True)\n",
-    "X_test_ohe, _ = prepr.preprocess_for_regression(df=X_test, fit_ohe=False, ohe=ohe)\n",
-    "assert shapes_pre == (X_train.shape[0], X_test.shape[0])\n",
-    "dump(ohe, open(local_path_save + run_name + '_ohe.pkl', 'wb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35bf80f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure()\n",
-    "fig.subplots_adjust(hspace=0.4, wspace=0.4)\n",
-    "ax = fig.add_subplot(1, 2, 1)\n",
-    "sns.histplot(Y_train,ax=ax).set_title('Y training set')\n",
-    "ax = fig.add_subplot(1, 2, 2)\n",
-    "sns.histplot(Y_test,ax=ax).set_title('Y test set')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a35a85e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Y_train.describe()"
+    "X_train, X_test, Y_train, Y_test = train_test_split(X,Y, test_size=0.3, random_state=seed)"
    ]
   },
   {
@@ -157,14 +124,6 @@
    "source": [
     "baseline_regression_training.calculate_regression_baseline(Y_train=Y_train, Y_test=Y_test, run_name=run_name)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "058d4e44",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
