--- a/01_Linear_Regression.ipynb
+++ b/01_Linear_Regression.ipynb
@@ -123,6 +123,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "53bc0603",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculating regression baseline\n",
+    "linear_regression_training.calculate_regression_baseline(Y_train=Y_train, Y_test=Y_test, run_name=run_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6094dc2e",
    "metadata": {
     "scrolled": true
