--- a/02.1_Regularized_Linear_Regression_Ridge.ipynb
+++ b/02.1_Regularized_Linear_Regression_Ridge.ipynb
@@ -143,6 +143,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ce13138e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculating regression baseline\n",
+    "ridge_regression_training.calculate_regression_baseline(Y_train=Y_train, Y_test=Y_test, run_name=run_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6094dc2e",
    "metadata": {
     "scrolled": true
