--- a/02.3_Regularized_Linear_Regression_ElasticNet.ipynb
+++ b/02.3_Regularized_Linear_Regression_ElasticNet.ipynb
@@ -146,6 +146,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b6860ca0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculating regression baseline\n",
+    "elastic_net_regression_training.calculate_regression_baseline(Y_train=Y_train, Y_test=Y_test, run_name=run_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6094dc2e",
    "metadata": {
     "scrolled": true
