--- a/02.4_Comparing_LinearRegression_Models.ipynb
+++ b/02.4_Comparing_LinearRegression_Models.ipynb
@@ -20,7 +20,6 @@
     "from scripts.Preprocessing import Preprocessing\n",
     "from scripts.LinearRegressionTraining import LinearRegressionTraining\n",
     "\n",
-    "from scripts.model_registry import ModelRegistry\n",
     "from scripts.config import (year_month_train,\n",
     "    model_name_pref,\n",
     "    input_data_path_train,\n",
@@ -174,11 +173,22 @@
     "\n",
     "#preprocessing ohe\n",
     "shapes_pre = (X_train.shape[0], X_test.shape[0])\n",
-    "X_train_ohe, ohe = prepr.preprocess_for_regression(df=X_train, fit_ohe=True)\n",
-    "X_test_ohe, _ = prepr.preprocess_for_regression(df=X_test, fit_ohe=False, ohe=ohe)\n",
+    "X_train_ohe, ohe = prepr.preprocess_for_regression(df=X_train, fit_ohe=True, drop_first_column=True)\n",
+    "X_test_ohe, _ = prepr.preprocess_for_regression(df=X_test, fit_ohe=False, ohe=ohe, drop_first_column=True)\n",
     "\n",
     "assert shapes_pre == (X_train.shape[0], X_test.shape[0])\n",
     "dump(ohe, open(local_path_save + run_name + '_ohe.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0edf26d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculating regression baseline\n",
+    "linear_regression_training.calculate_regression_baseline(Y_train=Y_train, Y_test=Y_test, run_name=run_name)"
    ]
   },
   {
