--- a/03_Classification_Baseline.ipynb
+++ b/03_Classification_Baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "36445b86",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "36b31eef",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ebde894d",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8350492",
+   "id": "baab07a2",
    "metadata": {},
    "source": [
     "### Experiments"
@@ -76,8 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "d19c1039",
+   "execution_count": null,
+   "id": "d9faad7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,8 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "9d2ee31d",
+   "execution_count": null,
+   "id": "2f21478a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,80 +100,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "598eb429",
+   "execution_count": null,
+   "id": "fecde496",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/davideposillipo/Documents/Didattica.nosync/DSR_ML_Fundamentals_2023/scripts/Preprocessing.py:150: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
-      "  df['lpep_pickup_datetime_week'] = df['lpep_pickup_datetime'].dt.week\n",
-      "/Users/davideposillipo/Documents/Didattica.nosync/DSR_ML_Fundamentals_2023/scripts/Preprocessing.py:150: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
-      "  df['lpep_pickup_datetime_week'] = df['lpep_pickup_datetime'].dt.week\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prepr = Preprocessing(input_data_path_train, task_type='classification')\n",
     "X, Y = prepr.read_dataframe(request_tgt=True)\n",
     "\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X,Y, test_size=0.3, random_state=seed)\n",
-    "\n",
-    "#preprocessing ohe\n",
-    "shapes_pre = (X_train.shape[0], X_test.shape[0])\n",
-    "X_train_ohe, ohe = prepr.preprocess_for_classification(df=X_train, fit_ohe=True, drop_first_column=True)\n",
-    "X_test_ohe, _ = prepr.preprocess_for_classification(df=X_test, fit_ohe=False, drop_first_column=True, ohe=ohe)\n",
-    "assert shapes_pre == (X_train.shape[0], X_test.shape[0])\n",
-    "dump(ohe, open(local_path_save + run_name + '_ohe.pkl', 'wb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "83f056b7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/davideposillipo/.pyenv/versions/3.10.9/envs/mlops/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/Users/davideposillipo/.pyenv/versions/3.10.9/envs/mlops/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'accuracy_train': 0.9808173477898249, 'accuracy_test': 0.97568093385214, 'precision_train': 0.0, 'precision_test': 0.0, 'recall_train': 0.0, 'recall_test': 0.0, 'f1_score_train': 0.0, 'f1_score_test': 0.0}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'loss': 0.97568093385214, 'status': 'ok'}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "baseline_classification_training.calculate_classification_baseline(Y_train=Y_train, Y_test=Y_test, run_name=run_name)"
+    "X_train, X_test, Y_train, Y_test = train_test_split(X,Y, test_size=0.3, random_state=seed)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "192a4c5c",
-   "metadata": {},
+   "id": "eb9b0d7c",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "baseline_classification_training.calculate_classification_baseline(Y_train=Y_train, Y_test=Y_test, run_name=run_name)"
+   ]
   }
  ],
  "metadata": {
