added template for classification comparison

--- a/09_Comparing_Classification_Models.ipynb
+++ b/09_Comparing_Classification_Models.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_path_save = './local_artifacts_tmp/08_SVM/'\n",
+    "local_path_save = './local_artifacts_tmp/09_Comparing_Classification_Models/'\n",
     "year_month = year_month_train\n",
     "input_data_path = input_data_path_train"
    ]
@@ -64,9 +64,24 @@
     "mlflow.set_tracking_uri(\"sqlite:///mlflow.db\")\n",
     "\n",
     "# Name of the experiment\n",
-    "exp_name = \"08 - SVM\"\n",
+    "exp_name = \"09 - Comparing Classification Models\"\n",
     "# set up MlFlow axperiment\n",
     "experiment_id = mlflow.set_experiment(exp_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6d3f9cc",
+   "metadata": {},
+   "source": [
+    "Using what we did in the previous sections and following the structure of the 02.4_Comparing_LinearRegression_Models notebook, try to compare in a single experiment the models we saw so far:\n",
+    "- Logistic Regression\n",
+    "- Decision Tree\n",
+    "- Random Forest\n",
+    "- Gradient Boosting\n",
+    "- SVM\n",
+    "\n",
+    "From our MLFlow UI we should be able to identify the winning model. "
    ]
   },
   {
@@ -90,73 +105,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "364cb4ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "svm_training = BinaryClassificationTraining(\n",
-    "    input_data_path,\n",
-    "    local_path_save,\n",
-    "    year_month,\n",
-    "    'svm')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60281d74",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "prepr = Preprocessing(input_data_path_train, task_type='classification')\n",
-    "X, Y = prepr.read_dataframe(request_tgt=True)\n",
-    "\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X,Y, test_size=0.3, random_state=seed)\n",
-    "\n",
-    "\n",
-    "#preprocessing ohe\n",
-    "shapes_pre = (X_train.shape[0], X_test.shape[0])\n",
-    "X_train_ohe, ohe, scaler = prepr.preprocess_for_classification(df=X_train, fit_ohe=True, perform_scaling=True)\n",
-    "X_test_ohe, _, _ = prepr.preprocess_for_classification(df=X_test, \n",
-    "                                                    fit_ohe=False, \n",
-    "                                                    ohe=ohe,\n",
-    "                                                    perform_scaling=True,\n",
-    "                                                    scaler=scaler)\n",
-    "assert shapes_pre == (X_train.shape[0], X_test.shape[0])\n",
-    "dump(ohe, open(local_path_save + run_name + '_ohe.pkl', 'wb'))\n",
-    "dump(scaler, open(local_path_save + run_name + '_scaler.pkl', 'wb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80a8d945",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculating the baseline\n",
-    "svm_training.calculate_classification_baseline(Y_train=Y_train, Y_test=Y_test, run_name=run_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "865a9212",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO complete the experiment using your implementation from BinaryClassificationTraining"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "12ff2641",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#TODO"
+   ]
   }
  ],
  "metadata": {
